--- a/.devrc
+++ b/.devrc
@@ -2006,6 +2006,28 @@ opencode() {
     BASH_ENV="$HOME/.bashrc" command opencode "$@"
 }
 
+openCodeWithPrompt() {
+    local prompt_text=""
+    local model="bigpickle"  # Default model
+    local additional_args=()
+    
+    # Get prompt from promptinit
+    prompt_text=$(promptinit)
+    
+    # Parse model argument if provided
+    if [ -n "$1" ] && [[ "$1" != *"--"* ]]; then
+        model="$1"
+        shift  # Remove model from args, keep any remaining args
+    fi
+    
+    # Add any additional arguments (like --agent, --continue, etc.)
+    additional_args+=("--prompt" "$prompt_text" "--model" "$model")
+    additional_args+=("$@")
+    
+    # Launch opencode with prompt, model, and any additional flags
+    opencode "${additional_args[@]}"
+}
+
 # Check if a package/command is installed (silent check)
 # Usage: installPackage <package_name>
 installPackage() {
