fix: scope initUbuntu strict mode to subshell
Prevent set -u from leaking into interactive shells after running initUbuntu.

This avoids prompt-hook crashes like '_WARP_GENERATOR_COMMAND: unbound variable' and unexpected SSH disconnects.

--- a/.devrc
+++ b/.devrc
@@ -958,10 +958,14 @@ installNeovim() {
 }
 
 initUbuntu() {
-    set -eu
-    sudo apt-get update -y
-    sudo apt-get upgrade -y
-    sudo apt-get install -y ca-certificates curl git openssh-client zip unzip vim make fzf
+    # Keep strict mode scoped to this function invocation so it does not
+    # leak into the interactive shell and break prompt hooks.
+    (
+        set -eu
+        sudo apt-get update -y
+        sudo apt-get upgrade -y
+        sudo apt-get install -y ca-certificates curl git openssh-client zip unzip vim make fzf
+    )
 }
 
 loginUbuntu() {
